--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon --exec babel-node"
+    "dev": "nodemon --exec babel-node app.js",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
