--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon --exec babel-node app.js",
+    "dev": "nodemon app.js",
     "start": "node app.js"
   },
   "keywords": [],
